--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-    "name": "galaxy",
-    "main": "server.js",
-    "dependencies": {
-        "express": "~4.0.0",
-        "body-parser": "~1.0.1"
-    }
+  "name": "galaxy",
+  "main": "server.js",
+  "dependencies": {
+    "express": "~4.0.0",
+    "body-parser": "~1.0.1"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  }
 }
